k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-service
  template:
    metadata:
      labels:
        app: node-service
    spec:
      containers:
        - name: node-service
          image: <ECR_IMAGE_URI>
          ports:
            - containerPort: 3000
