k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: ClusterIP
  selector:
    app: node-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
